--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,118 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+@font-face {
+  font-family: 'Poppins';
+  src: url( ./assets/fonts/Poppins-Regular.ttf );
+  font-weight: normal;
+  font-style: normal;
+}
+
+html,
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+  padding: 0;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+body {
+  min-height: 100vh;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: normal;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.btn {
+  min-width: 146px;
+  min-height: 40px;
+  background: #F8EDDD;
+  border-radius: 33px;
+  border: none;
+  color: #9E896A;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.btn:active {
+  background: #553E19;
+}
+
+.btn-active {
+  background: #9E896A;
+  color: #FFFFFF;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.btn-large {
+  min-width: 232px;
+  min-height: 49px;
+}
+
+.custom-input {
+  min-height: 54px;
+  border-radius: 40px;
+  background: #FFFFFF;
+  border: 1px solid #9E896A;
+  padding: 15px 31px 16px 23px;
+  font-size: 15px;
+  line-height: 22px;
+}
+
+.btn-eye {
+  position: absolute;
+  bottom: 10%;
+  right: 5%;
+}
+
+.btn-eye:hover {
+  cursor: pointer;
+}
+
+
+.item-enter {
+  opacity: 0;
+}
+.item-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+.item-exit {
+  opacity: 1;
+}
+.item-exit-active {
+  opacity: 0;
+  transition: opacity 500ms ease-in;
 }
